retrieveUnpackaged/objects/CNCS_Corporate_Program__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It tells you whether the record is in active status or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNCS_Corporate_Program_Code__c</fullName>
        <formula>CNCS_Corporate_Program_Name__r.Code_Corporate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNCS Corporate Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNCS_Corporate_Program_Name1__c</fullName>
        <formula>CNCS_Corporate_Program_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNCS Corporate Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNCS_Corporate_Program_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CNCS Corporate Program Name</label>
        <referenceTo>CNCS_Corporate_Program__c</referenceTo>
        <relationshipLabel>CNCS Child Programs</relationshipLabel>
        <relationshipName>CNCS_Corporate_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CNCS_Program_Code__c</fullName>
        <formula>CNCS_Program_Name__r.Code_CNCS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNCS Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNCS_Program_Name1__c</fullName>
        <formula>CNCS_Program_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNCS Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNCS_Program_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CNCS Program Name</label>
        <referenceTo>CNCS_Corporate_Program__c</referenceTo>
        <relationshipLabel>CNCS Corporate Programs</relationshipLabel>
        <relationshipName>CNCS_Corporate_Programs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code_CNCS__c</fullName>
        <description>4 digit char code for program name</description>
        <label>CNCS 4 Char Code</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Code_Child__c</fullName>
        <description>Unique code for CNCS Child program</description>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Code_Corporate__c</fullName>
        <description>Unique code for CNCS Corporate program</description>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Corporate_Programs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Programs</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>CNCS Corporate Programs</relationshipLabel>
        <relationshipName>CNCS_Corporate_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CNCS_Corporate_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date of the program</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Director_ID__r.FirstName &amp;&quot; &quot;&amp; Director_ID__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Code__c</fullName>
        <label>Short Code</label>
        <length>2</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start date of the program</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Street_Address_Line1__c</fullName>
        <description>Street number, street lane name</description>
        <label>Street Address Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_Line_2__c</fullName>
        <description>Apt/Building number</description>
        <label>Street Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Director_ID__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>CNCS Corporate Structure</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code_CNCS__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CNCS Corporate Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CNCS Corporate Structure</pluralLabel>
    <recordTypes>
        <fullName>Child_Program</fullName>
        <active>true</active>
        <label>Child Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Corporate_Program</fullName>
        <active>true</active>
        <label>Corporate Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program</fullName>
        <active>true</active>
        <label>Program</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>